atualizacao cx login e font titulo

--- a/forca-jovem/index.html
+++ b/forca-jovem/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <h1 id="titilo">Copa Força Jovem</h1>
-        <img id="logo" src="imagens/logo.png" alt="logo força jovem">
     </header>
     <main>
         <div id="container">
@@ -24,7 +23,7 @@
                     </div>
                     <div id="cx-senha">
                         <label for="ipass">Senha</label>
-                        <input type="password" name="senha" id="ipass" maxlength="20" placeholder="Senha" required >
+                        <input type="password" name="senha" id="ipass" maxlength="20" minlength="8" placeholder="Senha" size="20" required >
                     </div>
                     <div id="submeter"><input id="botao" type="submit" value="Entrar"></div>
                 </form>
