atualizacao font e background header

--- a/forca-jovem/index.html
+++ b/forca-jovem/index.html
@@ -25,7 +25,8 @@
                         <label for="ipass">Senha</label>
                         <input type="password" name="senha" id="ipass" maxlength="20" minlength="8" placeholder="Senha" size="20" required >
                     </div>
-                    <div id="submeter"><input id="botao" type="submit" value="Entrar"></div>
+                    <div id="submeter"><input id="botao" type="submit" value="Entrar"></div><br>
+                    <p>Esqueceu a senha <a href="#">clique aqui</a></p>
                 </form>
             </div>
         </div>
